--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>adotePet</title>
-        <link rel="stylesheet" href="../assets/style/estilo.css">
+        <link rel="stylesheet" href="../css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
-        <script src="../js/funcoes.js" defer></script>
+        <link rel="icon" href="../img/logo/logo.png">
+        <script src="../js/carrossel.js" defer></script>
     </head>
     <body class="corpoIndex">
         <header class="cabecalho">
             <div class="logo">
                 <h1>adotePet</h1>
-                <img src="../assets/img/logo/logo.png" alt="Logo adotePet" class="logo">
+                <img src="../img/logo/logo.png" alt="Logo adotePet" class="logo">
             </div>
             <div class="menu">
                 <a href="index.html">Início</a>
@@ -28,54 +29,54 @@
         <main class="slide">
             <div class="container">
                 <div class="divImgSlide">
-                    <img src="../assets/img/criancasCachorro.jpg" alt="Crianças com cachorro">
+                    <img src="../img/criancasCachorro.jpg" alt="Crianças com cachorro">
                     <p>É apenas uma descrição teste!</p>
                 </div>
                 <div class="divImgSlide">
-                    <img src="../assets/img/gatinhos.jpg" alt="Filhotes de gato">
+                    <img src="../img/gatinhos.jpg" alt="Filhotes de gato">
                     <p>É apenas uma descrição teste!</p>
                 </div>
                 <div class="divImgSlide">
-                    <img src="../assets/img/homemGatinho.jpg" alt="Homem e gatinho">
+                    <img src="../img/homemGatinho.jpg" alt="Homem e gatinho">
                     <p>É apenas uma descrição teste!</p>
                 </div>
                 <div class="divImgSlide">
-                    <img src="../assets/img/maoCachorro.jpg" alt="Mão acaracionando cachorro">
+                    <img src="../img/maoCachorro.jpg" alt="Mão acaracionando cachorro">
                     <p>É apenas uma descrição teste!</p>
                 </div>
                 <div class="divImgSlide">
-                    <img src="../assets/img/maoGato.jpg" alt="Mão acariciando gato">
+                    <img src="../img/maoGato.jpg" alt="Mão acariciando gato">
                     <p>É apenas uma descrição teste!</p>
                 </div>
                 <div class="divImgSlide">
-                    <img src="../assets/img/meninasCachorro.jpg" alt="Meninas com cachorro">
+                    <img src="../img/meninasCachorro.jpg" alt="Meninas com cachorro">
                     <p>É apenas uma descrição teste!</p>
                 </div>
                 <div class="divImgSlide">
-                    <img src="../assets/img/pernasCachorro.jpg" alt="Crianças sentadas no sofá com cachorro">
+                    <img src="../img/pernasCachorro.jpg" alt="Crianças sentadas no sofá com cachorro">
                     <p>É apenas uma descrição teste!</p>
                 </div>
             </div> 
         </main>
         <section class="adote">
-            <img src="../assets/img/cachorroMood.png" alt="cachorro brincando">
             <div class="atencaoAdocao">
                 <p>Tá esperando o que?</p>
                 <a href="adoteMe.html">Clique aqui e adote seu amiguinho!</a>
             </div>
+            <img src="../img/cachorroMood.png" alt="cachorro brincando">  
         </section>
         <footer class="rodape">
             <p>Desenvolvido por Jonathan Couto</p>
             <a href="https://www.instagram.com/jony.couto/" target="_blank">
-                <img src="../assets/img/logo/logoInsta.webp" alt="Instragram">
+                <img src="../img/logo/logoInsta.webp" alt="Instragram">
                 <p>Instagram</p>
             </a>
             <a href="https://twitter.com/pequenopandawan" target="_blank">
-                <img src="../assets/img/logo/logoTwi.png" alt="Twitter">
+                <img src="../img/logo/logoTwi.png" alt="Twitter">
                 <p>Twitter</p>
             </a>
             <a href="https://www.linkedin.com/in/jonathan-vinicius-couto-a4900119b/" target="_blank">
-                <img src="../assets/img/logo/logoLink.png" alt="linkedIn">
+                <img src="../img/logo/logoLink.png" alt="linkedIn">
                 <p>linkedIn</p>
             </a>
         </footer>
